fix: Treeview menu loading perf issue - EXO-73169 - Meeds-io/meeds#2411 (#1126)